--- a/movies/templates/movies/home.html
+++ b/movies/templates/movies/home.html
@@ -11,8 +11,8 @@
                 <small class="text-muted">{{ movie.release_date|date:"F d, Y" }}</small>
             </div>
             <h2>{{ movie.title }}</h2>
-            <p class="article-content"><img src="{{ movie.poster_url}}" alt="">
-                <a href="http://www.allocine.fr/seance/film-{{ movie.allocine_code}}/toutes/">Voir les séances sur Allociné</a>
+            <p class="article-content"><img src="{{ movie.poster_url}}" alt="" class="">
+                <a href="http://www.allocine.fr/seance/film-{{ movie.allocine_code}}/toutes/" target="_blank">Voir les séances sur Allociné</a>
             </p>
 
           </div>
