changed query to get distinct and oredered movies

--- a/movies/templates/movies/home.html
+++ b/movies/templates/movies/home.html
@@ -4,7 +4,7 @@
 
     <!-- Jumbotron Header -->
 
-    {% if is_paginated and page_obj.number == 1 %}
+    {% if is_paginated and movies.number == 1 %}
 
     <header class="jumbotron my-4">
       <h1 class="display-3">Bienvenue sur <strong>Après dernière</strong> !</h1>
@@ -16,18 +16,18 @@
     <!-- Page Features -->
 <div class="container">
     <div class="row text-center">
-    {% for showing in showings %}
+    {% for movie in movies %}
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="{{ showing.movie.poster_url}}" alt="">
+          <img class="card-img-top" src="{{ movie.poster_url}}" alt="">
           <div class="card-body">
-            <h4 class="card-title">{{ showing.movie.title }}</h4>
+            <h4 class="card-title">{{ movie.title }}</h4>
             <p class="card-text">
-                <small class="text-muted">{{ showing.movie.release_date|date:"F d, Y" }}</small>
+                <small class="text-muted">{{ movie.release_date|date:"F d, Y" }}</small>
             </p>
           </div>
           <div class="card-footer">
-              <a href="http://www.allocine.fr/seance/film-{{ showing.movie.allocine_code}}/toutes/" class="btn btn-primary" target="_blank">Voir les séances sur Allociné</a>
+              <a href="http://www.allocine.fr/seance/film-{{ movie.allocine_code}}/toutes/" class="btn btn-primary" target="_blank">Voir les séances sur Allociné</a>
           </div>
         </div>
       </div>
@@ -45,22 +45,22 @@
 
     {% if is_paginated %}
 
-      {% if page_obj.has_previous %}
+      {% if movies.has_previous %}
         <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        <a class="btn btn-outline-info mb-4" href="?page={{ movies.previous_page_number }}">Previous</a>
       {% endif %}
 
-      {% for num in page_obj.paginator.page_range %}
-        {% if page_obj.number == num %}
+      {% for num in movies.paginator.page_range %}
+        {% if movies.number == num %}
           <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+        {% elif num > movies.number|add:'-3' and num < movies.number|add:'3' %}
           <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
         {% endif %}
       {% endfor %}
 
-      {% if page_obj.has_next %}
-        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+      {% if movies.has_next %}
+        <a class="btn btn-outline-info mb-4" href="?page={{ movies.next_page_number }}">Next</a>
+        <a class="btn btn-outline-info mb-4" href="?page={{ movies.paginator.num_pages }}">Last</a>
       {% endif %}
 
 {% endif %}
