--- a/movies/templates/movies/layouts/base.html
+++ b/movies/templates/movies/layouts/base.html
@@ -25,14 +25,19 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Après dernière</a>
+      <a class="navbar-brand" href="{% url 'movies-home' %}">Après dernière</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item text-center">
+            <form class="foodsearch" action="{%  url 'search' %}">
+              <input type="text" class="form-control" placeholder="Rechercher" name="query">
+            </form>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="{% url 'movies-home' %}">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -68,9 +73,9 @@
   <!-- /.container -->
 
   <!-- Footer -->
-  <footer class="py-5 bg-dark">
+  <footer class="py-1 bg-dark fixed-bottom">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; 2019</p>
+      <p class="m-0 text-center text-white">Copyright C.Caradec &copy; 2019</p>
     </div>
     <!-- /.container -->
   </footer>
