--- a/movies/templates/movies/layouts/base.html
+++ b/movies/templates/movies/layouts/base.html
@@ -45,7 +45,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="{% url 'theaters' %}">Cinémas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
