--- a/movies/templates/movies/layouts/base.html
+++ b/movies/templates/movies/layouts/base.html
@@ -37,19 +37,29 @@
             </form>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'movies-home' %}">Home
+            <a class="nav-link" href="{% url 'movies-home' %}">Accueil
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">A propos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'theaters' %}">Cinémas</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+
+          {% if user.is_authenticated %}
+          <li class="nav-item text-center">
+              <a title="Déconnexion" class="nav-link" href="{% url 'profile' %}">Profil</a>
           </li>
+          <li class="nav-item text-center">
+              <a title="Déconnexion" class="nav-link" href="{% url 'logout' %}">Déconnexion</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Connexion</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
