--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,20 +1,11 @@
 
-{% extends "pur_beurre/layouts/base.html" %}
+{% extends "movies/layouts/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
 <section id="login">
    <div class="container my-auto">
        <div class="row">
            <div class="col-lg-8 mx-auto">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="container">
-                        <div class="alert alert-{{ message.tags }}">
-                        {{ message }}
-                        </div>
-                    </div>
-                {% endfor %}
-            {% endif %}
            {% if next %}
                        <div class="container">
                         <div class="alert alert-warning">
