--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,4 @@
-{% extends "pur_beurre/layouts/base.html" %}
+{% extends "movies/layouts/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
 
