--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,5 +1,5 @@
 
-{% extends "pur_beurre/layouts/base.html" %}
+{% extends "movies/layouts/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
 <section id="register">
