--- a/movies/templates/movies/pages/movie.html
+++ b/movies/templates/movies/pages/movie.html
@@ -1,39 +1,36 @@
+{% extends "movies/layouts/base.html" %}
 {% load static %}
+{% block content %}
 
 <div class="container">
     <div class="row text-center">
-    {% for movie in movies %}
       <div class="col-lg-2 col-md-6 mb-4">
-      <a href="{% url 'movie' %}?movie={{movie.allocine_code}}">
         <div class="card h-100">
             {% if movie.poster_url %}
             <img class="card-img-top" src="{{ movie.poster_url }}" alt="">
             {% else %}
             <img class="card-img-top" src="{% static 'movies/img/collection-bandes-film_1017-7088.jpg' %}" alt="">
             {% endif %}
-
-          <div class="card-body">
+            <div class="card-body">
             <p class="card-title">{{ movie.title }}</p>
             <p class="card-text">
                 <small class="text-muted">{{ movie.release_date|date:"d/m/Y" }}</small>
             </p>
-          </div>
-        </a>
+            </div>
         </div>
       </div>
-    {% if forloop.counter|divisibleby:6 %}
+    <div class="col-lg-6">
+        <p>
+        <a href="http://www.allocine.fr/seance/film-{{ movie.allocine_code}}/toutes/" class="btn btn-primary" target="_blank">
+            Enregistrer dans mes favoris
+        </a></p>
+        <p>
+        <a href="http://www.allocine.fr/seance/film-{{ movie.allocine_code}}/toutes/" class="btn btn-primary" target="_blank">
+            Voir les séances sur Allociné
+        </a>
+        </p>
     </div>
-    <div class="row text-center">
-    {% endif %}
-    {% endfor %}
-    </div>
+  </div>
 </div>
 
-{% if list_type == 'theater' %}
-{% include "movies/partials/_theater-pagination.html" %}
-{% else %}
-{% include "movies/partials/_pagination.html" %}
-{% endif %}
-
-
-
+{% endblock content %}
