--- a/movies/templates/movies/pages/home.html
+++ b/movies/templates/movies/pages/home.html
@@ -4,8 +4,8 @@
 
     {% if is_paginated and movies.number == 1 %}
 
-    <header class="jumbotron my-4">
-      <h4 class="display-4">Bienvenue sur <strong>Après dernière</strong> !</h4>
+    <header class="jumbotron my-2 p-4">
+      <h4 class="display-5">Bienvenue sur <strong>Après dernière</strong> !</h4>
       <p class="lead">Retrouvez la liste des films repassant au cinéma après leur dernière séance.</p>
 
     </header>
