--- a/movies/templates/movies/layouts/base.html
+++ b/movies/templates/movies/layouts/base.html
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">A propos</a>
+            <a class="nav-link" href="{% url 'about' %}">A propos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'theaters' %}">Cinémas</a>
