--- a/movies/templates/movies/partials/_movie-list.html
+++ b/movies/templates/movies/partials/_movie-list.html
@@ -4,21 +4,21 @@
     <div class="row text-center">
     {% for movie in movies %}
       <div class="col-lg-2 col-md-6 mb-4">
-      <a href="{% url 'movie' %}?movie={{movie.allocine_code}}">
-        <div class="card h-100">
-            {% if movie.poster_url %}
-            <img class="card-img-top" src="{{ movie.poster_url }}" alt="">
-            {% else %}
-            <img class="card-img-top" src="{% static 'movies/img/collection-bandes-film_1017-7088.jpg' %}" alt="">
-            {% endif %}
+        <div class="card h-100 card_movie">
+          <a href="{% url 'movie' %}?movie={{movie.allocine_code}}">
+                {% if movie.poster_url %}
+                <img class="card-img-top" src="{{ movie.poster_url }}" alt="">
+                {% else %}
+                <img class="card-img-top" src="{% static 'movies/img/collection-bandes-film_1017-7088.jpg' %}" alt="">
+                {% endif %}
 
-          <div class="card-body">
-            <p class="card-title">{{ movie.title }}</p>
-            <p class="card-text">
-                <small class="text-muted">{{ movie.release_date|date:"d/m/Y" }}</small>
-            </p>
-          </div>
-        </a>
+              <div class="card-body">
+                <p class="card-title">{{ movie.title }}</p>
+                <p class="card-text">
+                  <small class="text-muted">{{ movie.release_date|date:"d/m/Y" }}</small>
+                </p>
+              </div>
+            </a>
         </div>
       </div>
     {% if forloop.counter|divisibleby:6 %}
