added save model

--- a/movies/static/movies/css/heroic-features.css
+++ b/movies/static/movies/css/heroic-features.css
@@ -8,6 +8,9 @@ body {
   padding-bottom: 30px;
 }
 
+.card img {
+}
+
 .card_movie a, a:active, a:focus, a:hover {
   text-decoration: none;
   outline: none;
