--- a/movies/templates/movies/pages/results.html
+++ b/movies/templates/movies/pages/results.html
@@ -1,12 +1,12 @@
 {% extends "movies/layouts/base.html" %}
 {% block content %}
-<h1>Résultats de la recherche</h1>
+<div class="container">
+<h3>Résultats de la recherche</h3>
 
 {% if not movies %}
-<div class="container">
-    Nous n'avons pas de résultat de film correspondant à la recherche {{ query}}.
-</div>
+    Malheureusement, nous n'avons pas de résultat de film correspondant à la recherche {{ query}}.
 {% else %}
     {% include "movies/partials/_movie-list.html" with list_type="list" %}
 {% endif %}
+</div>
 {% endblock content %}
