--- a/movies/templates/movies/partials/_movie-list.html
+++ b/movies/templates/movies/partials/_movie-list.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row text-center">
     {% for movie in movies %}
-      <div class="col-lg-2 col-md-6 mb-4">
+      <div class="col-lg-2 col-sm-4 mb-4">
         <div class="card h-100 card_movie">
           <a href="{% url 'movie' %}?movie={{movie.allocine_code}}">
                 {% if movie.poster_url %}
