--- a/movies/templates/movies/partials/_pagination.html
+++ b/movies/templates/movies/partials/_pagination.html
@@ -1,21 +1,21 @@
 {% if is_paginated %}
 
   {% if movies.has_previous %}
-    <a class="btn btn-outline-info mb-4" href="?page=1">|<</a>
-    <a class="btn btn-outline-info mb-4" href="?page={{ movies.previous_page_number }}"><</a>
+    <a class="btn btn-outline-secondary mb-4" href="?page=1">|<</a>
+    <a class="btn btn-outline-secondary mb-4" href="?page={{ movies.previous_page_number }}"><</a>
   {% endif %}
 
   {% for num in movies.paginator.page_range %}
     {% if movies.number == num %}
-      <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+      <a class="btn btn-secondary mb-4" href="?page={{ num }}">{{ num }}</a>
     {% elif num > movies.number|add:'-3' and num < movies.number|add:'3' %}
-      <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+      <a class="btn btn-outline-secondary mb-4" href="?page={{ num }}">{{ num }}</a>
     {% endif %}
   {% endfor %}
 
   {% if movies.has_next %}
-    <a class="btn btn-outline-info mb-4" href="?page={{ movies.next_page_number }}">></a>
-    <a class="btn btn-outline-info mb-4" href="?page={{ movies.paginator.num_pages }}">>|</a>
+    <a class="btn btn-outline-secondary mb-4" href="?page={{ movies.next_page_number }}">></a>
+    <a class="btn btn-outline-secondary mb-4" href="?page={{ movies.paginator.num_pages }}">>|</a>
   {% endif %}
 
 {% endif %}
