minor design corrections

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -21,7 +21,7 @@
                         {{ form|crispy }}
                     </fieldset>
                     <div class="form-group">
-                        <button class="btn" type="submit">Connexion</button>
+                        <button class="btn btn-primary" type="submit">Connexion</button>
                     </div>
                 </form>
                 <div class="border-top pt-3">
