--- a/movies/templates/movies/pages/saved_movies.html
+++ b/movies/templates/movies/pages/saved_movies.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12 text-center">
-      <h2 class="section-heading">Films sauvés par {{ user|title }}</h2>
+      <h2 class="section-heading">Films sauvegardés par {{ user|title }}</h2>
     </div>
   </div>
 </div>
