--- a/movies/templates/movies/pages/theater.html
+++ b/movies/templates/movies/pages/theater.html
@@ -4,7 +4,7 @@
 
 <h2>Anciens films diffusés au cinéma <a href="http://www.allocine.fr/seance/salle_gen_csalle={{theater.theater_code}}.html" target="_blank">{{ theater }}</a></h2>
 <div class="container">
-    <div class="row text-center"><h3><a href="{% url 'theaters' %}">Revenir à la liste des cinémas</a></h3>
+    <div class="row text-center"><h3><a href="{% url 'theaters' %}">Liste des cinémas</a></h3>
     </div>
 </div>
 
