--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -9,7 +9,7 @@
       <iv class="col-lg-12 text-center">
         <h2 class="section-heading">Vous êtes déconnecté</h2>
         <hr class="my-4">
-           <div><a href="{% url 'login' %}">Se reconnecter</a></div>
+           <div><a href="{% url 'login' %}" class="btn btn-primary">Se reconnecter</a></div>
           <div><a href="{% url 'movies-home' %}">Revenir à l'accueil</a></div>
       </div>
     </div>
