--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -7,8 +7,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Profil de {{ user.username }}</h2>
-                <hr class="my-4">
+                <h2>Profil de {{ user.username|title }}</h2>
+                <a href="{% url 'saved-movies' %}">Voir mes films sauvegardés</a><hr class="my-4">
                 <p>Email : {{ user.email }}</p>
             </div>
         </div>
