--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -14,7 +14,7 @@
                         {{ form|crispy }}
                     </fieldset>
                     <div class="form-group">
-                        <button class="btn" type="submit">S'inscrire </button>
+                        <button class="btn btn-primary" type="submit">S'inscrire </button>
                     </div>
                 </form>
                 <div class="border-top pt-3">
