minor added favicon for external links

--- a/movies/static/movies/css/heroic-features.css
+++ b/movies/static/movies/css/heroic-features.css
@@ -8,6 +8,15 @@ body {
   padding-bottom: 30px;
 }
 
+.ac-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.delete {
+  color: red;
+}
+
 .card img {
 }
 
