--- a/movies/templates/movies/pages/about.html
+++ b/movies/templates/movies/pages/about.html
@@ -3,7 +3,7 @@
 {% block content %}
  <header class="jumbotron my-4">
       <h4 class="display-5">A propos d'<strong>Après dernière</strong> !</h4>
-      <p class="lead">Après dernière est un site qui utilise les informations disponibles sur Allociné pour compiler une
+      <p class="lead">Après dernière est un site qui utilise les informations disponibles sur <a href="http://www.allocine.fr" target="_blank"><img src="http://www.allocine.fr/favicon.ico" class="ac-icon" alt=""> Allociné</a> pour compiler une
     liste des films plus anciens qui repassent temporairement à l'affiche dans les salles parisiennes</p>
 
     </header>
