--- a/movies/templates/movies/layouts/base.html
+++ b/movies/templates/movies/layouts/base.html
@@ -49,10 +49,10 @@
           </li>
 
           {% if user.is_authenticated %}
-          <li class="nav-item text-center">
+          <li class="nav-item">
               <a title="Déconnexion" class="nav-link" href="{% url 'profile' %}">Profil</a>
           </li>
-          <li class="nav-item text-center">
+          <li class="nav-item">
               <a title="Déconnexion" class="nav-link" href="{% url 'logout' %}">Déconnexion</a>
           </li>
           {% else %}
