--- a/movies/templates/movies/pages/movie.html
+++ b/movies/templates/movies/pages/movie.html
@@ -40,7 +40,7 @@
             {% endfor %}
         {% endif %}
 
-        <p>
+        <p class="my-3">
         <a href="http://www.allocine.fr/seance/film-{{ movie.allocine_code}}/toutes/" target="_blank">
             <img src="http://www.allocine.fr/favicon.ico" class="ac-icon" alt=""> Voir toutes les séances de
             {{ movie.title }} sur Allociné
