--- a/movies/templates/movies/layouts/base.html
+++ b/movies/templates/movies/layouts/base.html
@@ -26,7 +26,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="{% url 'movies-home' %}">Après dernière</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+              aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -50,7 +51,7 @@
 
           {% if user.is_authenticated %}
           <li class="nav-item">
-              <a title="Déconnexion" class="nav-link" href="{% url 'profile' %}">Profil</a>
+              <a title="Déconnexion" class="nav-link" href="{% url 'saved-movies' %}">Mes films</a>
           </li>
           <li class="nav-item">
               <a title="Déconnexion" class="nav-link" href="{% url 'logout' %}">Déconnexion</a>
