--- a/movies/templates/movies/pages/about.html
+++ b/movies/templates/movies/pages/about.html
@@ -2,14 +2,21 @@
 {% load static %}
 {% block content %}
  <header class="jumbotron my-4">
-      <h4 class="display-5">A propos d'<strong>Après dernière</strong> !</h4>
-      <p class="lead">Après dernière est un site qui utilise les informations disponibles sur <a href="http://www.allocine.fr" target="_blank"><img src="http://www.allocine.fr/favicon.ico" class="ac-icon" alt=""> Allociné</a> pour compiler une
-    liste des films plus anciens qui repassent temporairement à l'affiche dans les salles parisiennes</p>
+      <h4 class="display-5">A propos d'<strong>Après dernière</strong>...</h4>
+      <p class="lead">Après dernière est un site qui utilise les informations disponibles sur
+          <a href="http://www.allocine.fr" target="_blank">
+          <img src="http://www.allocine.fr/favicon.ico" class="ac-icon" alt=""> Allociné</a> pour compiler une
+          liste des films plus anciens qui repassent temporairement à l'affiche dans les salles parisiennes,
+      </p>
 
-    </header>
-
+</header>
 
 <small class="text-muted">
+<p>
 <a href="https://www.freepik.com/free-vector/collection-film-strips_1050256.htm">Image de pellicules créée par starline - www.freepik.com</a>
+</p>
+<p>
+<a href="http://www.allocine.fr">Logo facivon Allociné</a>
+</p>
 </small>
 {% endblock content %}
