--- a/movies/templates/movies/pages/about.html
+++ b/movies/templates/movies/pages/about.html
@@ -16,7 +16,7 @@
 <a href="https://www.freepik.com/free-vector/collection-film-strips_1050256.htm">Image de pellicules créée par starline - www.freepik.com</a>
 </p>
 <p>
-<a href="http://www.allocine.fr">Logo facivon Allociné</a>
+<a href="http://www.allocine.fr">Logo favicon Allociné</a>
 </p>
 </small>
 {% endblock content %}
