minor correction on theater links

--- a/movies/templates/movies/pages/theaters.html
+++ b/movies/templates/movies/pages/theaters.html
@@ -18,11 +18,11 @@
 
     {% for theater in theaters %}
         <tr>
-          <td><a href="http://www.allocine.fr/seance/salle_gen_csalle={{theater.theater_code}}.html" target="_blank">
+          <td><a href="http://www.allocine.fr/seance/salle_gen_csalle={{theater.theater_code}}.html" target="_blank" title="Voir sur Allociné">
               <img src="http://www.allocine.fr/favicon.ico" class="ac-icon" alt="">
               {{ theater }}</a></td>
             <td class="text-center">
-                <a href="{% url 'theater' %}?theater={{theater.theater_code}}" class="btn btn-secondary">
+                <a href="{% url 'theater' %}?theater={{theater.theater_code}}" class="btn btn-secondary" title="Voir la liste">
                     {{ theater.number_of_showings}}</a>
             </td>
           <td class="text-muted">{{ theater.address}}</td>
