--- a/movies/templates/movies/layouts/base.html
+++ b/movies/templates/movies/layouts/base.html
@@ -12,6 +12,10 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'movies/css/heroic-features.css' %}">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+    <link rel="shortcut icon" type="image/png" href="{% static 'movies/img/favicon.ico' %}"/>
 
     {% if title %}
         <title>Après dernière- {{ title }}</title>
@@ -25,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'movies-home' %}">Après dernière</a>
+      <a class="navbar-brand" href="{% url 'movies-home' %}"><i class="fas fa-film"></i> Après dernière</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
               aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
