--- a/movies/templates/movies/pages/about.html
+++ b/movies/templates/movies/pages/about.html
@@ -18,5 +18,9 @@
 <p>
 <a href="http://www.allocine.fr">Logo favicon Allociné</a>
 </p>
+<p>
+Logo favicon Après dernière : <a href="https://fontawesome.com/icons/film?style=solid">film</a> de <a href="https://fontawesome.com/license">FontAwesome</a>
+</p>
+
 </small>
 {% endblock content %}
