--- a/movies/templates/movies/pages/movie.html
+++ b/movies/templates/movies/pages/movie.html
@@ -25,7 +25,7 @@
         <div class="col-lg-12">
 
         <p>
-        <a href="{% url 'save' %}?code={{ movie.allocine_code }}" class="btn btn-primary">
+        <a href="{% url 'save' %}?code={{ movie.allocine_code }}" class="btn btn-info">
             Enregistrer ce film dans mes favoris
         </a></p>
         {% if theaters|length > 0 %}
